--- a/css/styles.css
+++ b/css/styles.css
@@ -337,6 +337,13 @@ transform: translateX(0%);
     margin-bottom: 30px;
     text-align: center;
 }
+.footer__subtitle{
+    font-weight: 300;
+    color: #fff;
+    font-size: 1rem;
+    margin-bottom: 10px;
+    text-align: center;
+}
 .footer__icons{
     display: flex;
     justify-content: space-evenly;
